--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "requirejs": "~2.1.4",
     "modernizr": "~2.8.3",
-    "jquery": "~2.1.3"
+    "jquery": "~2.1.3",
+    "backbone": "~1.1.2"
   },
   "devDependencies": {}
 }
